--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,7 @@ modules.xml
 .idea/sonarlint
 
 # End of https://www.gitignore.io/api/composer,phpstorm+all
+
+# App specific files
+# Config
+config.php
